# RaytracingPractice

./: .gitignore  README.md  RaytracingPractice.sln
RaytracingPractice/: RaytracingPractice.cpp  RaytracingPractice.vcxproj  RaytracingPractice.vcxproj.filters  camera.h  hitable.h  material.h  mytest.ppm  ray.h  sphere.h  stdafx.cpp
doc/: raytracing.md  raytracingpractice.md
src/: CMakeLists.txt  RaytracingPractice.cpp  hitable.h  hitable_list.h  sphere.h
